feat: criar checklists agrupados e exportar laudo em PDF
