# artifacts/api-server/src/routes/orders.ts
@@ -54,6 +54,7 @@ router.get("/orders", async (_req, res): Promise<void> => {
       id: ordersTable.id,
       number: ordersTable.number,
       clientId: ordersTable.clientId,
+      checklistId: ordersTable.checklistId,
       address: ordersTable.address,
       clientName: clientsTable.name,
       title: ordersTable.title,
@@ -103,6 +104,7 @@ router.get("/orders/:id", async (req, res): Promise<void> => {
       id: ordersTable.id,
       number: ordersTable.number,
       clientId: ordersTable.clientId,
+      checklistId: ordersTable.checklistId,
       address: ordersTable.address,
       clientName: clientsTable.name,
       title: ordersTable.title,
