# lib/db/src/schema/checklists.ts
@@ -1,0 +1,10 @@
+import { pgTable, serial, text, timestamp } from "drizzle-orm/pg-core";
+
+export const checklistsTable = pgTable("checklists", {
+  id: serial("id").primaryKey(),
+  name: text("name").notNull(),
+  createdAt: timestamp("created_at", { withTimezone: true }).notNull().defaultNow(),
+  updatedAt: timestamp("updated_at", { withTimezone: true }).notNull().defaultNow().$onUpdate(() => new Date()),
+});
+
+export type Checklist = typeof checklistsTable.$inferSelect;
